cluster/home/external-dns/services/proxmox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external-cname
  namespace: external-dns
spec:
  type: ExternalName
  externalName: proxmox0.local.cjsolsen.com
  ports:
    - port: 8006
