cluster/home/external-dns/services/proxmox-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-ingress
  namespace: external-dns
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.local.cjsolsen.com`)
      kind: Rule
      services:
        - name: proxmox-external-cname
          port: 8006
          scheme: https
      middlewares:
        - name: default-headers
  tls:
    secretName: proxmox-cjsolsen-com-tls
